Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1893

Error reported when defining a complex type as an extension of an imported simple type

    XMLWordPrintableJSON

Details

    Description

      Trying to validate the attached schema, where a complexType is defined as an extension of a simpleType coming from an imported schema, fails with a "type not found" error

      Attachments

        1. included.xsd
          0.3 kB
          Alberto Massari
        2. main.xsd
          0.5 kB
          Alberto Massari

        Activity

          People

            amassari Alberto Massari
            amassari Alberto Massari
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: