When the base type for a complex type cannot be found in an imported schema that has already been processed, check if a simple type with the same name exists (XERCESC-1893)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@830474 13f79535-47bb-0310-9956-ffa450edef68